# polartoolkit

./: .codecov.yml  .coverage  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pypirc  .readthedocs.yaml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Fiona-1.8.21-cp38-cp38-win_amd64.whl  LICENSE  Makefile  README.md  auto_xsection.ipynb  coverage.xml  doc_requirements.txt  environment.txt  environment.yml  fetch_all_datasets.ipynb  noxfile.py  pyproject.toml  pyproject.txt  requirements.txt  requirements_core.txt  requirements_hashes.txt  requirements_no_hashes.txt  setup.cfg  setup.py  setup.txt
.github/: CONTRIBUTING.md  config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release_checklist.md
.github/workflows/: cd.yml  ci-tests.yml  ci.yml  format.yml  get_pypi_stats.yml  push.yml  pypi_release.yml  release.yml  semantic_release.yml  semantic_release_check.yml  test.yml  validate-zenodo.yml  workflow.yml
.ipynb_checkpoints/: auto_xsection-checkpoint.ipynb
antarctic_plots/: __init__.py  _version_generated.py  fetch.py  maps.py  profile.py  regions.py  utils.py
antarctic_plots.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
antarctic_plots/tests/: __init__.py  test_antarctic_plots.py  test_fetch.py  test_profile.py  test_utils.py
binder/: environment.yml
data/: Disco_deep_transect_1k.dbf  Roosevelt_Island_10k.dbf  Roosevelt_Island_10k.shp
data/Disco_deep_transect/: Disco_deep_transect_1k.shp  Disco_deep_transect_1k.shx
data/Roosevelt_Island/: Roosevelt_Island_10k.prj  Roosevelt_Island_10k.shx
docs/: _config.yml  _polartoolkit_refs.bib  _toc.yml  antarctic_plots.rst  api.md  api.rst  changelog.md  citing.md  conf.py  contribute.md  contributing.md  doc_requirements.txt  index.md  index.rst  install.md  installation.md  intro.md  modules.rst  overview.md  quickstart.ipynb  references.md  references.rst  tips.ipynb  tips.md  walkthrough.ipynb  walkthrough.md
docs/_build/.doctrees/: api.doctree  changelog.doctree  environment.pickle  installation.doctree  intro.doctree  walkthrough.doctree
docs/_build/html/: .buildinfo  api.html  changelog.html  genindex.html  index.html  installation.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html  walkthrough.html
docs/_build/jupyter_execute/: tutorial.py  walkthrough.ipynb  walkthrough.py
docs/_templates/: module.rst_t  package.rst_t
docs/api/: antarctic_plots.fetch.rst  antarctic_plots.maps.rst  antarctic_plots.profile.rst  antarctic_plots.regions.rst  antarctic_plots.rst  antarctic_plots.utils.rst  polartoolkit.fetch.rst  polartoolkit.maps.rst  polartoolkit.profile.rst  polartoolkit.profiles.rst  polartoolkit.regions.rst  polartoolkit.rst  polartoolkit.utils.rst
docs/auto_examples/: index.rst  plot_basic_plot.ipynb  plot_basic_plot.py  plot_basic_plot.py.md5  plot_basic_plot.rst  plot_basic_plot_codeobj.pickle  sg_execution_times.rst
docs/datasets/: basement.ipynb  bedmap_points.ipynb  index.md  template.ipynb
docs/datasets/antarctica/: basal_melt.ipynb  basement.ipynb  bed_type.ipynb  bedmap_points.ipynb  crustal_thickness.ipynb  deepbedmap.ipynb  etopo.ipynb  geoid.ipynb  geology.ipynb  geothermal_heat_flux.ipynb  glacial_isostatic_adjustment.ipynb  groundingline.ipynb  ibcso.ipynb  ibcso_coverage.ipynb  ice_boundaries.ipynb  ice_shelf_buttressing.ipynb  ice_velocity.ipynb  imagery.ipynb  index.md  mass_change.ipynb  modis_moa.ipynb  moho.ipynb  rema.ipynb  rosetta_gravity.ipynb  rosetta_magnetics.ipynb  sediment_thickness.ipynb
docs/datasets/arctic/: index.md
docs/datasets/greenland/: etopo.ipynb  geoid.ipynb  groundingline.ipynb  index.md  (+2 more)
docs/examples/: plot_basic_plot.py
docs/gallery/: 3D_stack.ipynb  basic_map.ipynb  basic_plot.ipynb  colormaps.ipynb  extend_pygmt.ipynb  gallery.ipynb  gallery.md  gallery2.ipynb  gallery_list.yml  index.md  mask_from_shp.ipynb  masking_and_subsetting_data.ipynb  profile.ipynb  profile_with_data.ipynb  profile_with_map.ipynb  setting_projection.ipynb  subplots.ipynb  utils_walkthrough.ipynb
docs/how_to/: 3D_plotting.ipynb  colormaps.ipynb  defining_regions.ipynb  download_NASA_data.ipynb  index.md  manipulating_regions.ipynb  map_features.ipynb  switch_between_hemispheres.ipynb
docs/source/: api.md  conf.py  index.md  installation.md  usage.md
docs/tracking/: downloads_data.csv  gather-targeted-package-metrics.ipynb  stats.py  usage_stats.md
docs/tutorial/: 01_download_data.ipynb  02_specify_download_parameters.ipynb  03_simple_map.ipynb  04_map_features.ipynb  05_subplots.ipynb  06_3D_plots.ipynb  07_plotting_point_data.ipynb  08_cross_sections_and_profiles.ipynb  09_interactive_data.ipynb  10_reprojecting_data.ipynb  3D_plots.ipynb  download_data.ipynb  fetch_walkthrough.ipynb  index.md  regions_plots.ipynb  regions_walkthrough.ipynb  subplots.ipynb  tutorials.ipynb  tutorials.md  tutorials2.ipynb  utils_walkthrough.ipynb
docs_old/source/: conf.py  conf.py.txt
env/: RTD_env.yml  env_format.yml  env_test.yml  environment.yml  requirements-format.txt  test_env.yml  testing_env.yml
envs/: requirements-test.txt
examples/: examples.ipynb  examples.py  tutorial.py
examples/.ipynb_checkpoints/: examples-checkpoint.ipynb
paper/: figures_for_JOSS.ipynb  paper.bib  paper.md
sample_data/: BedMachine_bed_wgs_10k.nc  BedMachine_icebase_wgs_10k.nc  BedMachine_surface_wgs_10k.nc  Coastline_Antarctica_v02.dbf  Coastline_Antarctica_v02.shp  Coastline_Antarctica_v02.shx  Coastline_Antarctica_v02.xml  GroundingLine_Antarctica_v02.dbf  GroundingLine_Antarctica_v02.shp  GroundingLine_Antarctica_v02.shx  GroundingLine_Antarctica_v02.xml  ant4d_bafa.tif  ant4d_fa.tif
src/antarctic_plots/: __init__.py  fetch.py  maps.py  profile.py  regions.py  utils.py
src/polartoolkit/: __init__.py  fetch.py  maps.py  profile.py  profiles.py  regions.py  utils.py
templates/: CHANGELOG.md.j2
tests/: test_fetch.py  test_polartoolkit.py  test_profile.py  test_profiles.py  test_regions.py  test_utils.py
tools/: changelog.py  license_notice.py
(+20 files in other folders)
