[metadata]
name = antarctic_plots
description = Functions to automate Antarctic data visualization
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/mdtanker/antarctic_plots
author = Matt Tankersley
author_email = matt.d.tankersley@gmail.com
license = MIT
license_files = LICENSE.txt
keywords = antarctica, geoscience
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Tracker = https://github.com/mdtanker/antarctic_plots/issues
    Source = https://github.com/mdtanker/antarctic_plots

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires = 
    pygmt
    pandas
    numpy
    pooch
    xarray
    pyproj
    verde
    rioxarray
setup_requires =
    setuptools_scm